# TT_Tauts

./: LICENSE  README
docs/: doc_tt_tauts.html
src/: CMakeLists.txt  MolGridDisplay.H  MolGridDisplay.cc  TTTauts.H  TTTauts.cc  TTTautsBatchSettings.cpp  TTTautsBatchSettings.h  TTTautsSettings.H  TTTautsSettings.cc  TautStand.H  TautStand.cc  TautomerGenerator.H  TautomerGenerator.cc  check_oechem_licence.cc  draw_oemol_to_qimage.cc  gen_t_skel.cc  make_taut_skeleton.cc  make_taut_skeleton_old.cc  radical_atoms.cc  test_tt_tauts.cpp  tt_tauts.cc  tt_tauts_batch.cc
test_dir/: 1082532.smi  119734.smi  13779.smi  14253.smi  153534.smi  155287.smi  18048.smi  19253.smi  263083.smi  31034.smi  31359.smi  3306810.smi  3306810_small.smi  34961.smi  34961_small.smi  4.smi  414205.smi  438132.smi  439119.smi  440060.smi  440067.smi  440484.smi  443682.smi  500474_small.smi  501944_small.smi  503551_small.smi  583299.smi  583299_small1.smi  583299_small2.smi  6313.smi  6461.smi  6654_amide.smi  6808.smi  6808_small.smi  8387.smi  8387_small.smi  99566.smi  agl1.smi  agl2.smi  chebi2295_small.smi  (+11 more)
